@@ -22,7 +22,7 @@
 	aHW_NAME[15]='Odroid N2'
 	aHW_NAME[20]='x86_64 VM'
 	aHW_NAME[21]='x86_64 PC'
-	aHW_NAME[22]='Generic device'
+	aHW_NAME[22]='Generic Device'
 	aHW_NAME[30]='OrangePi PC'
 	aHW_NAME[31]='OrangePi One'
 	aHW_NAME[32]='OrangePi Zero (H2+)'
@@ -33,17 +33,18 @@
 	aHW_NAME[37]='OrangePi Prime'
 	aHW_NAME[38]='OrangePi PC 2'
 	aHW_NAME[39]='LeMaker Guitar'
-	aHW_NAME[40]='Pine A64'
+	aHW_NAME[40]='PINE A64'
 	aHW_NAME[41]='OrangePi PC Plus'
-	aHW_NAME[42]='RockPro64'
-	aHW_NAME[43]='Rock64'
-	aHW_NAME[44]='Pinebook A64'
-	aHW_NAME[45]='Pine H64'
+	aHW_NAME[42]='ROCKPro64'
+	aHW_NAME[43]='ROCK64'
+	aHW_NAME[44]='Pinebook'
+	aHW_NAME[45]='PINE H64'
 	aHW_NAME[50]='BananaPi M2+ (sinovoip)'
 	aHW_NAME[51]='BananaPi Pro (Lemaker)'
-	aHW_NAME[52]='Asus Tinker Board'
+	aHW_NAME[52]='ASUS Tinker Board'
 	aHW_NAME[53]='BananaPi (sinovoip)'
-	aHW_NAME[58]='NanoPi M4v2'
+	aHW_NAME[57]='NanoPi NEO Plus2'
+	aHW_NAME[58]='NanoPi M4V2'
 	aHW_NAME[59]='ZeroPi'
 	aHW_NAME[60]='NanoPi NEO'
 	aHW_NAME[61]='NanoPi M2/T2'
@@ -56,7 +57,7 @@
 	aHW_NAME[68]='NanoPi M4/T4/NEO4'
 	aHW_NAME[69]='Firefly RK3399'
 	aHW_NAME[70]='Sparky SBC'
-	aHW_NAME[71]='Beagle Bone Black'
+	aHW_NAME[71]='BeagleBone Black'
 	aHW_NAME[72]='ROCK Pi 4'
 	aHW_NAME[73]='ROCK Pi S'
 
