@@ -404,13 +404,14 @@
 			'15' ': Odroid N2'
 			'70' ': Sparky SBC'
 			'52' ': ASUS Tinker Board'
-			'40' ': Pine A64'
-			'43' ': Rock64'
-			'42' ': RockPro64'
-			'45' ': Pine H64'
+			'40' ': PINE A64'
+			'43' ': ROCK64'
+			'42' ': ROCKPro64'
+			'45' ': PINE H64'
 			'59' ': ZeroPi'
 			'60' ': NanoPi NEO'
 			'65' ': NanoPi NEO2'
+			'57' ': NanoPi NEO Plus2'
 			'64' ': NanoPi NEO Air'
 			'63' ': NanoPi M1/T1'
 			'66' ': NanoPi M1 Plus'
@@ -418,7 +419,7 @@
 			'61' ': NanoPi M2/T2'
 			'62' ': NanoPi M3/T3/Fire3'
 			'68' ': NanoPi M4/T4/NEO4'
-			'58' ': NanoPi M4v2'
+			'58' ': NanoPi M4V2'
 			'72' ': ROCK Pi 4'
 			'73' ': ROCK Pi S'
 			'69' ': Firefly RK3399'
@@ -435,10 +436,10 @@
 			'53' ': BananaPi (sinovoip)'
 			'51' ': BananaPi Pro (Lemaker)'
 			'50' ': BananaPi M2+ (sinovoip)'
-			'71' ': Beagle Bone Black'
+			'71' ': BeagleBone Black'
 			'39' ': LeMaker Guitar'
 			'' '●─ Other '
-			'22' ': Generic device'
+			'22' ': Generic Device'
 
 		)
 
