@@ -19,10 +19,10 @@
 	#
 	# G_HW_MODEL 73 ROCK Pi S
 	# G_HW_MODEL 72 ROCK Pi 4
-	# G_HW_MODEL 71 Beagle Bone Black
+	# G_HW_MODEL 71 BeagleBone Black
 	# G_HW_MODEL 70 Sparky SBC
 	# G_HW_MODEL 69 Firefly RK3399
-	# G_HW_MODEL 68 NanoPC T4
+	# G_HW_MODEL 68 NanoPi M4/T4/NEO4
 	# G_HW_MODEL 67 NanoPi K1 Plus
 	# G_HW_MODEL 66 NanoPi M1 Plus
 	# G_HW_MODEL 65 NanoPi NEO2
@@ -32,17 +32,18 @@
 	# G_HW_MODEL 61 NanoPi M2/T2
 	# G_HW_MODEL 60 NanoPi NEO
 	# G_HW_MODEL 59 ZeroPi
-	# G_HW_MODEL 58 NanoPi M4v2
+	# G_HW_MODEL 58 NanoPi M4V2
+	# G_HW_MODEL 57 NanoPi NEO Plus2
 	# G_HW_MODEL 53 BananaPi (sinovoip)
-	# G_HW_MODEL 52 Asus Tinker Board
+	# G_HW_MODEL 52 ASUS Tinker Board
 	# G_HW_MODEL 51 BananaPi Pro (Lemaker)
 	# G_HW_MODEL 50 BananaPi M2+ (sinovoip)
-	# G_HW_MODEL 45 Pine H64
+	# G_HW_MODEL 45 PINE H64
 	# G_HW_MODEL 44 Pinebook A64
-	# G_HW_MODEL 43 Rock64
-	# G_HW_MODEL 42 RockPro64
+	# G_HW_MODEL 43 ROCK64
+	# G_HW_MODEL 42 ROCKPro64
 	# G_HW_MODEL 41 OrangePi PC Plus
-	# G_HW_MODEL 40 Pine A64
+	# G_HW_MODEL 40 PINE A64
 	# G_HW_MODEL 39 LeMaker Guitar
 	# G_HW_MODEL 38 OrangePi PC 2
 	# G_HW_MODEL 37 OrangePi Prime
@@ -53,14 +54,14 @@
 	# G_HW_MODEL 32 OrangePi Zero (H2+)
 	# G_HW_MODEL 31 OrangePi One
 	# G_HW_MODEL 30 OrangePi PC
-	# G_HW_MODEL 22 Generic device
+	# G_HW_MODEL 22 Generic Device
 	# G_HW_MODEL 21 x86_64 PC
 	# G_HW_MODEL 20 x86_64 VM
 	# G_HW_MODEL 15 Odroid N2
 	# G_HW_MODEL 14 Odroid N1
 	# G_HW_MODEL 13 Odroid U3
 	# G_HW_MODEL 12 Odroid C2
-	# G_HW_MODEL 11 Odroid XU3/XU4/HC1/HC2/MC1
+	# G_HW_MODEL 11 Odroid XU3/XU4/MC1/HC1/HC2
 	# G_HW_MODEL 10 Odroid C1
 	# G_HW_MODEL 4 Raspberry Pi 4
 	# G_HW_MODEL 3 Raspberry Pi 3/3+
@@ -112,9 +113,9 @@
 	G_DISTRO=0
 	G_DISTRO_NAME='Unknown'
 	G_HW_UUID=${G_HW_UUID:-$(</proc/sys/kernel/random/uuid)}
-	G_HW_ONBOARD_WIFI=0
 
 	# RPi extras
+	G_HW_ONBOARD_WIFI=0
 	G_HW_REVISION=
 	G_HW_PCB_REVISION='Unknown'
 	G_HW_MEMORY_SIZE=512
@@ -321,7 +322,7 @@
 
 			elif (( $G_HW_MODEL == 71 )); then
 
-				G_HW_MODEL_NAME='BBB' # Beagle Bone Black
+				G_HW_MODEL_NAME='BeagleBone Black'
 
 			elif (( $G_HW_MODEL == 70 )); then
 
@@ -334,7 +335,7 @@
 
 			elif (( $G_HW_MODEL == 68 )); then
 
-				G_HW_MODEL_NAME='NanoPC T4'
+				G_HW_MODEL_NAME='NanoPi M4/T4/NEO4'
 				G_HW_CPUID=3
 
 			elif (( $G_HW_MODEL == 67 )); then
@@ -349,7 +350,7 @@
 
 			elif (( $G_HW_MODEL == 65 )); then
 
-				G_HW_MODEL_NAME='NanoPi NEO 2'
+				G_HW_MODEL_NAME='NanoPi NEO2'
 				G_HW_CPUID=2
 
 			elif (( $G_HW_MODEL == 64 )); then
@@ -364,7 +365,7 @@
 
 			elif (( $G_HW_MODEL == 62 )); then
 
-				G_HW_MODEL_NAME='NanoPi M3/T3/F3'
+				G_HW_MODEL_NAME='NanoPi M3/T3/Fire3'
 
 			elif (( $G_HW_MODEL == 61 )); then
 
@@ -372,7 +373,7 @@
 
 			elif (( $G_HW_MODEL == 60 )); then
 
-				G_HW_MODEL_NAME='NanoPi Neo'
+				G_HW_MODEL_NAME='NanoPi NEO'
 				G_HW_CPUID=1
 
 			elif (( $G_HW_MODEL == 59 )); then
@@ -382,8 +383,13 @@
 
 			elif (( $G_HW_MODEL == 58 )); then
 
-				G_HW_MODEL_NAME='NanoPi M4v2'
+				G_HW_MODEL_NAME='NanoPi M4V2'
 				G_HW_CPUID=3
+
+			elif (( $G_HW_MODEL == 57 )); then
+
+				G_HW_MODEL_NAME='NanoPi NEO Plus2'
+				G_HW_CPUID=2
 
 			elif (( $G_HW_MODEL == 53 )); then
 
@@ -391,7 +397,7 @@
 
 			elif (( $G_HW_MODEL == 52 )); then
 
-				G_HW_MODEL_NAME='Asus Tinker Board'
+				G_HW_MODEL_NAME='ASUS Tinker Board'
 
 			elif (( $G_HW_MODEL == 51 )); then
 
@@ -404,20 +410,20 @@
 
 			elif (( $G_HW_MODEL == 45 )); then
 
-				G_HW_MODEL_NAME='Pine H64'
+				G_HW_MODEL_NAME='PINE H64'
 				G_HW_CPUID=5
 
 			elif (( $G_HW_MODEL == 44 )); then
 
-				G_HW_MODEL_NAME='Pinebook A64'
+				G_HW_MODEL_NAME='Pinebook'
 
 			elif (( $G_HW_MODEL == 43 )); then
 
-				G_HW_MODEL_NAME='Rock64'
+				G_HW_MODEL_NAME='ROCK64'
 
 			elif (( $G_HW_MODEL == 42 )); then
 
-				G_HW_MODEL_NAME='RockPro64'
+				G_HW_MODEL_NAME='ROCKPro64'
 				G_HW_CPUID=3
 
 			elif (( $G_HW_MODEL == 41 )); then
@@ -427,7 +433,7 @@
 
 			elif (( $G_HW_MODEL == 40 )); then
 
-				G_HW_MODEL_NAME='Pine A64'
+				G_HW_MODEL_NAME='PINE A64'
 
 			elif (( $G_HW_MODEL == 39 )); then
 
@@ -504,7 +510,7 @@
 
 			elif (( $G_HW_MODEL == 11 )); then
 
-				G_HW_MODEL_NAME='Odroid XU3/XU4/HC1/HC2'
+				G_HW_MODEL_NAME='Odroid XU3/XU4/MC1/HC1/HC2'
 
 			elif (( $G_HW_MODEL == 10 )); then
 
@@ -586,11 +592,11 @@ G_HW_CPU_CORES=$G_HW_CPU_CORES
 G_DISTRO=$G_DISTRO
 G_DISTRO_NAME='$G_DISTRO_NAME'
 G_ROOTFS_DEV='$G_ROOTFS_DEV'
-G_HW_UUID='$G_HW_UUID'
-G_HW_ONBOARD_WIFI=$G_HW_ONBOARD_WIFI" > /boot/dietpi/.hw_model
+G_HW_UUID='$G_HW_UUID'" > /boot/dietpi/.hw_model
 
 		# - RPi extras
-		(( $G_HW_MODEL < 10 )) && echo "G_HW_REVISION='$G_HW_REVISION'
+		(( $G_HW_MODEL < 10 )) && echo "G_HW_ONBOARD_WIFI=$G_HW_ONBOARD_WIFI
+G_HW_REVISION='$G_HW_REVISION'
 G_HW_PCB_REVISION=$G_HW_PCB_REVISION
 G_HW_MEMORY_SIZE=$G_HW_MEMORY_SIZE
 G_HW_MANUFACTURER='$G_HW_MANUFACTURER'" >> /boot/dietpi/.hw_model
